style: fix search textbox alignment

--- a/src/public/modules/forms/admin/css/view-responses.css
+++ b/src/public/modules/forms/admin/css/view-responses.css
@@ -743,3 +743,7 @@
 #responses-tab .response-search {
   flex-direction: row;
 }
+
+#responses-tab .input-custom {
+  width: inherit;
+}
